@@ -1,5 +1,9 @@
 #Version 0.7.8# 
 
+*  autoload.php > added 'Controller' suffix support for controllers files and 
+   fixed Peak_Application run() method and Peak_Controller initController() method accordly
+   Controller files and classes names look likes 'foobarController.php'
+
 *  Added Peak_Dispatcher
 
 *  Peak_View > fix problem with __call(). Methods 'return' value/boolean was missing
